--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
                                 <button onclick="closed()" type="button" class="ml-2 mb-1 close" data-dismiss="toast">&times;</button>
                             </div>
                             <div class="toast-body">
-                                <h6 style="color: burlywood">排名獎項：</h6>
+                                <h6 style="color: burlywood">排名獎項： <b style="color: rgb(107, 222, 174)">(實體獎品將會於 10.19 活動當場發放)</b>
+                                </h6>
                                 <p><b>第 1 名：</b>HTC EXODUS 乙支 + 研討會票券一張</p>
                                 <p><b>第 2 名：</b>CoolwalletS 乙個 + 研討會票券一張</p>
                                 <p><b>第 3 名：</b>Vitalik《理·想》簽名書乙本 + Crosslink 限量 T-shirt 乙件 + 研討會票券一張</p>
@@ -38,8 +39,7 @@
                                 <p><b>累計完成三關：</b>Crosslink 票價 9 折優惠</p>
                                 <p><b>累計完成七關：</b>Crosslink 票價 8 折優惠</p>
                                 <p style="color: rgb(77, 156, 230)">得獎者，請『主動』將合約地址私訊至 Taipei Ethereum Meetup 粉絲頁，小編會跟你確認後續取票事宜</p>
-                                <b style="color: crimson">(實體獎品將會於 10.19 活動當場發放)</b>
-
+                                <b style="color: rgb(245, 70, 0)">此次CTF目的在於讓大家更了解智能合約安全等相關議題，請勿以任何形式的惡意攻擊來妨礙他人進行關卡，任何影響其他用戶作答的行為皆被視為違規，違者失去參賽權益。</b>
                             </div>
                         </div>
                     </div>
