--- a/index.html
+++ b/index.html
@@ -21,39 +21,50 @@
             <table class="table table-striped">
                 <thead class="thead-dark">
                     <a href="https://www.facebook.com/eth.taipei/" target="_blank"><i class="fa fa-facebook-square" style="font-size:48px;"></i>Contact With TEM FB</a>
-                    <div id="move" class='move bg1'>
-                        <div class="toast" data-autohide="false">
-                            <div class="toast-header" id="toasth">
-                                <strong class="mr-auto text-primary">獎項說明</strong>
-                                <small class="text-muted">2019/10/5 更新</small>
-                                <button onclick="closed()" type="button" class="ml-2 mb-1 close" data-dismiss="toast">&times;</button>
+                    <div class="like-table">
+                        <div id="move" class='move bg1'>
+                            <div class="toast" data-autohide="false">
+                                <div class="toast-header" id="toasth">
+                                    <strong class="mr-auto text-primary">獎項說明</strong>
+                                    <small class="text-muted">2019/10/5 更新</small>
+                                    <button onclick="closed()" type="button" class="ml-2 mb-1 close" data-dismiss="toast">&times;</button>
+                                </div>
+                                <div class="toast-body">
+                                    <h6 style="color: burlywood">排名獎項： <b style="color: rgb(107, 222, 174)">(實體獎品將會於 10.19 活動當場發放)</b>
+                                    </h6>
+                                    <p><b>第 1 名：</b>HTC EXODUS 乙支 + 研討會票券一張</p>
+                                    <p><b>第 2 名：</b>CoolwalletS 乙個 + 研討會票券一張</p>
+                                    <p><b>第 3 名：</b>Vitalik《理·想》簽名書乙本 + Crosslink 限量 T-shirt 乙件 + 研討會票券一張</p>
+                                    <p><b>第 4 ~ 30 名：</b>將個別抽出 Crosslink 限量 T-shirt 三件 、Vitalik《理·想》簽名書兩本、研討會票券三張。</p>
+                                    <h6 style="color: burlywood">參加獎項：</h6>
+                                    <p><b>累計完成三關：</b>Crosslink 票價 9 折優惠</p>
+                                    <p><b>累計完成七關：</b>Crosslink 票價 8 折優惠</p>
+                                    <h6 style="color: burlywood">注意事項：</h6>
+                                    <p>此次Crosslink CTF遊戲之目的，在於讓參與者們更了解智能合約的相關安全議題， 基於良性競爭的前提下，歡迎挑戰者們發揮想像力來破解遊戲。為賦予每一位挑戰者公平競爭的權利，請遵守以下原則:
+                                        <br>
+                                        <b style="color: rgb(244, 115, 115)">1. 不允許攻擊參賽平台</b>
+                                        <br>
+                                        <b style="color: rgb(244, 115, 115)">2. 不允許攻擊而導致其他挑戰者無法參與比賽</b>
+                                        <br> 任何違反上述原則的行為將被視為違規， 違者將失去參賽權益， 已經完成之挑戰紀錄也將被視作無效。 謝謝大家配合， 希望大家都能享受比賽!
+                                    </p>
+                                    <p style="color: rgb(77, 156, 230)">得獎者，請『主動』將合約地址私訊至 Taipei Ethereum Meetup 粉絲頁，小編會跟你確認後續取票事宜</p>
+
+                                </div>
                             </div>
-                            <div class="toast-body">
-                                <h6 style="color: burlywood">排名獎項： <b style="color: rgb(107, 222, 174)">(實體獎品將會於 10.19 活動當場發放)</b>
-                                </h6>
-                                <p><b>第 1 名：</b>HTC EXODUS 乙支 + 研討會票券一張</p>
-                                <p><b>第 2 名：</b>CoolwalletS 乙個 + 研討會票券一張</p>
-                                <p><b>第 3 名：</b>Vitalik《理·想》簽名書乙本 + Crosslink 限量 T-shirt 乙件 + 研討會票券一張</p>
-                                <p><b>第 4 ~ 30 名：</b>將個別抽出 Crosslink 限量 T-shirt 三件 、Vitalik《理·想》簽名書兩本、研討會票券三張。</p>
-                                <h6 style="color: burlywood">參加獎項：</h6>
-                                <p><b>累計完成三關：</b>Crosslink 票價 9 折優惠</p>
-                                <p><b>累計完成七關：</b>Crosslink 票價 8 折優惠</p>
-                                <p style="color: rgb(77, 156, 230)">得獎者，請『主動』將合約地址私訊至 Taipei Ethereum Meetup 粉絲頁，小編會跟你確認後續取票事宜</p>
-                                <b style="color: rgb(245, 70, 0)">此次CTF目的在於讓大家更了解智能合約安全等相關議題，請勿以任何形式的惡意攻擊來妨礙他人進行關卡，任何影響其他用戶作答的行為皆被視為違規，違者失去參賽權益。</b>
-                            </div>
+                            <tr>
+                                <th scope="col">Rank</th>
+                                <th scope="col">Address</th>
+                                <th scope="col">Level Completed</th>
+                                <th scope="col">Block Number</th>
+                            </tr>
                         </div>
                     </div>
-                    <tr>
-                        <th scope="col">Rank</th>
-                        <th scope="col">Address</th>
-                        <th scope="col">Level Completed</th>
-                        <th scope="col">Block Number</th>
-                    </tr>
                 </thead>
                 <tbody id="tbody">
                 </tbody>
             </table>
         </div>
+    </div>
     </div>
     <script>
         $(document).ready(function() {
